fixed the gap in the story

--- a/style.css
+++ b/style.css
@@ -1242,7 +1242,7 @@ footer {
 
     /* Story Section */
     #story {
-        padding: 4rem 0;
+        padding:  0;
     }
 
     .story-text-center {
@@ -1594,7 +1594,7 @@ footer {
 
     /* Story Section */
     #story {
-        padding: 3rem 0;
+        padding: 0;
     }
 
     .story-label {
